--- a/Python/Python Study Notes/0. Getting Started.md
+++ b/Python/Python Study Notes/0. Getting Started.md
@@ -162,6 +162,11 @@ VSCode配置Python开发环境:
    {
        // See https://go.microsoft.com/fwlink/?LinkId=733558
        // for the documentation about the tasks.json format
+
+       //"command": "python",  interpreter python2
+       //"command": "python3",  interpreter python3
+
+
        "version": "0.1.0",
        "command": "python",
        "isShellCommand": true,
@@ -169,6 +174,7 @@ VSCode配置Python开发环境:
        "showOutput": "always"
    }
    ```
+
 
 运行文件:
 
