--- a/Python/Python Study Notes/2. Basic.md
+++ b/Python/Python Study Notes/2. Basic.md
@@ -493,7 +493,15 @@ It is called a literal because it is _literal_ - you use its value literally. Th
 
 
 
+## Immutable and Mutable
 
+**Numbers, Strings, and Tuples are Immutable**.
+
+> immutability can be used to guarantee that an object remains constant throughout your program
+
+**Lists, Dictionaries, and Sets are Mutable.** they can be changed in place freely, as can most new objects you’ll code with classes.
+
+> mutable objects’ values can be changed at any time and place (and whether you expect it or not).
 
 
 
