--- a/Python/Python Study Notes/字符串和编码.md
+++ b/Python/Python Study Notes/字符串和编码.md
@@ -223,23 +223,87 @@ a8 1010 1000
 
 A string is a _sequence_ of _characters_.一串字符串（String）是 _字符（Characters）_ 的 _序列（Sequence）_
 
-### 单引号
+the characters they contain have a left-to-right positional order and that they cannot be changed in place.
+
+> in Python we call a sequence—a positionally ordered collection of other objects. Sequences maintain a left-to-right order among the items they contain: their items are stored and fetched by their relative positions. Strictly speaking, strings are sequences of one-character strings; other, more general sequence types include lists and tuples
+
+### Immutability
+
+**Strings are Immutable in Python**
+
+> they cannot be changed in place after they are created. you can never overwrite the values of immutable objects.
+
+```
+>>> S 
+'Spam'
+
+>>> S[0] = 'z' 				# Immutable objects cannot be changed 
+...error text omitted...
+TypeError: 'str' object does not support item assignment
+
+>>> S = 'z' + S[1:]			# But we can run expressions to make new objects
+>>> S 
+'zpam'
+```
+
+```
+>>> S = 'shrubbery'
+>>> L = list(S)					# Expand to a list: [...]
+>>> L
+['s', 'h', 'r', 'u', 'b', 'b', 'e', 'r', 'y']
+>>> L[1] = 'c'					# Change it in place 
+>>> ''.join(L) 					# Join with empty delimiter
+'scrubbery'
+
+>>> B = bytearray(b'spam')		# A bytes/list hybrid (ahead)
+>>> B.extend(b'eggs')			# 'b' needed in 3.X, not 2.X 
+>>> B 							# B[i] = ord(c) works here too
+bytearray(b'spameggs')
+>>> B.decode() 					# Translate to normal string
+'spameggs'
+```
+
+The bytearray supports in-place changes for text, but only for text whose characters are all at most 8-bits wide (e.g., ASCII). All other strings are still immutable—bytear ray is a distinct hybrid of immutable bytes strings (whose b'...' syntax is required in 3.X and optional in 2.X) and mutable lists (coded and displayed in [])
+
+### 单引号 Single quotes:
 
 你可以使用单引号来指定字符串，例如 `'将我这样框进来'` 或 `'Quote me on this'` 。
 
 所有引号内的空间，诸如空格与制表符，都将按原样保留。
 
-### 双引号
+```
+>>> 'knight"s', "knight's" 
+('knight"s', "knight's")
+```
+
+the comma is important here. Without it, Python automatically concatenates adjacent string literals in any expression
+
+```
+>>> title = "Meaning " 'of' " Life"		# Implicit concatenation
+>>> title 
+'Meaning of Life'
+```
+
+### 双引号 Double quotes:
 
 被双引号包括的字符串和被单引号括起的字符串, 其工作机制完全相同。
 
 例如 `"你的名字是？"` 或 `"What's your name?"` 。
 
-### 三引号
+```
+>>> "What's your name?"
+"What's your name?"
+>>> 'the "book" is white'
+'the "book" is white'
+```
+
+### 三引号 Triple quotes:
 
 三引号允许一个字符串跨多行，字符串中可以包含换行符、制表符以及其他特殊字符。
 
 三引号的语法是一对连续的单引号`'''`或者双引号`"""`（通常都是成对的用）。
+
+Triple-quoted strings are useful anytime you need multiline text in your program; for example, to embed multiline error messages or HTML, XML, or JSON code in your Python source code files.
 
 你可以在三引号之间自由地使用单引号与双引号。来看看这个例子：
 
@@ -251,24 +315,18 @@ He said "Bond, James Bond."
 '''
 ```
 
-### 引号包裹
+三重引号字符串常用于文档字符串，当出现在文件的特定地点，被当做注释一样的字符串常量
 
-双引号里面允许出现单引号。反过来，单引号里面也可以包裹双引号:
+> Triple-quoted strings are also commonly used for documentation strings, which are string literals that are taken as comments when they appear at specific points in your file
 
 ```
->>> "What's your name?"
-"What's your name?"
->>> 'the "book" is white'
-'the "book" is white'
+X = 1 
+""" 
+import os 			# Disable this code temporarily
+print(os.getcwd()) 
+""" 
+Y = 2
 ```
-
-### 字符串是不可变的
-
-Strings Are Immutable
-
-这意味着一旦你创造了一串字符串，你就不能再改变它。
-
-
 
 ### 转义字符
 
@@ -281,28 +339,85 @@ Strings Are Immutable
 
 下面表格中列出常用的转义符：
 
-| 转义字符   | 描述                        |
-| ------ | ------------------------- |
-| \      | (在行尾时) 续行符                |
-| \      | 反斜杠符号                     |
-| \'     | 单引号                       |
-| \"     | 双引号                       |
-| \a     | 响铃                        |
-| \b     | 退格(Backspace)             |
-| \e     | 转义                        |
-| \000   | 空                         |
-| \n     | 换行                        |
-| \v     | 纵向制表符                     |
-| \t     | 横向制表符                     |
-| \r     | 回车                        |
-| \f     | 换页                        |
-| \oyy   | 八进制数，yy代表的字符，例如：\o12代表换行  |
-| \xyy   | 十六进制数，yy代表的字符，例如：\x0a代表换行 |
-| \other | 其它的字符以普通格式输出              |
+| 转义字符         | 描述                                       |
+| ------------ | ---------------------------------------- |
+| `\newline`   | (在行尾时) 续行符 Ignored (continuation line)   |
+| `\\`         | 反斜杠符号 (保留 `\`)                           |
+| `\'`         | 单引号 (保留 `'`)                             |
+| `\"`         | 双引号 (保留 `"`)                             |
+| `\a`         | 响铃                                       |
+| `\b`         | 退格(Backspace)                            |
+| \e           | 转义                                       |
+| `\0`         | 空 Null: binary 0 character (doesn’t end string) |
+| `\n`         | 换行 Newline (linefeed)                    |
+| `\v`         | 纵向制表符                                    |
+| `\t`         | 横向制表符                                    |
+| `\r`         | 回车 Carriage return                       |
+| `\f`         | 换页 Formfeed                              |
+| `\oyy`       | 八进制数，yy代表的字符，Character with octal value ooo (up to 3 digits) |
+| `\xyy`       | 十六进制数，yy代表的字符，Character with hex value hh (exactly 2 digits) |
+| `\other`     | 其它的字符以普通格式输出 Not an escape (keeps both \ and other) |
+| `\N{ id }`   | Unicode database ID                      |
+| `\uhhhh`     | Unicode character with 16-bit hex value  |
+| `\Uhhhhhhhh` | Unicode character with 32-bit hex value  |
+|              |                                          |
 
+### 原始字符串 Raw strings
 
+如果你需要指定一些未经过特殊处理的字符串，比如转义序列，那么你需要在字符串前增加 `r` 或 `R` 来指定一个 _原始（Raw）_ 字符串。由r开头引起的字符串，就是原始字符串，在里面放任何字符都表示该字符的原始含义。下面是一个例子：
+
+```
+>>> r"Newlines are indicated by \n"
+'Newlines are indicated by \\n'
+```
+
+> **针对正则表达式用户的提示**
+>
+> 在处理正则表达式时应全程使用原始字符串。否则，将会有大量 Backwhacking 需要处理。举例说明的话，反向引用可以通过 `'\\1'` 或 `r'\1' ` 来实现。
+
+这种方法在做网站设置网站目录结构的时候非常有用。使用了原始字符串，就不需要转义了。
+
+一个raw字符串不能以奇数个反斜杠结尾，因为反斜杠会转义后续引用的字符
 
 ### 字符串运算符
+
+A variable is created when you assign it a value, may be assigned any type of object, and is replaced with its value when it shows up in an expression. It must also have been previously assigned by the time you use its value.
+
+Common string literals and operations:
+
+```
+Operation						Interpretation
+
+S = '' 							Empty string
+S = "spam's" 					Double quotes, same as single
+S = 's\np\ta\x00m' 				Escape sequences
+S = """...multiline...""" 		Triple-quoted block strings
+S = r'\temp\spam' 				Raw strings (no escapes)
+B = b'sp\xc4m' 					Byte strings in 2.6, 2.7, and 3.X
+U = u'sp\u00c4m' 				Unicode strings in 2.X and 3.3+
+S1 + S2 						Concatenate, repeat
+S * 3 
+S[i] 							Index, slice, length
+S[i:j] 
+len(S) 
+"a %s parrot" % kind 			String formatting expression
+"a {0} parrot".format(kind)		String formatting method in 2.6, 2.7, and 3.X
+S.find('pa')					String methods (see ahead for all 43): search,
+S.rstrip()						remove whitespace,
+S.replace('pa', 'xx')			replacement,
+S.split(',')					split on delimiter,
+S.isdigit()						content test,
+S.lower()						case conversion,
+S.endswith('spam') 				end test,
+'spam'.join(strlist)			delimiter join,
+S.encode('latin-1')				Unicode encoding,
+B.decode('utf8') 				Unicode decoding, etc.
+for x in S: print(x) 			Iteration, membership
+'spam' in S 
+[c * 2 for c in S] 
+map(ord, S) 
+re.match('sp(.*)am', line)		Pattern matching: library module
+```
 
 下表实例变量 a 值为字符串 "Hello"，b 变量值为 "Python"：
 
@@ -317,21 +432,106 @@ Strings Are Immutable
 | r/R    | 原始字符串 - 原始字符串：所有的字符串都是直接按照字面的意思来使用，没有转义特殊或不能打印的字符。 原始字符串除在字符串的第一个引号前加上字母"r"（可以大小写）以外，与普通字符串有着几乎完全相同的语法。 | >>>print r'\n'\n>>> print R'\n'\n |
 | %      | 格式字符串                                    | 见格式化                              |
 
+#### Indexing and Slicing：
+
+**Indexing (S[i]) fetches components at offsets:**
+
+- The first item is at offset 0.
 
 
-### 原始字符串r(R)
+- Negative indexes mean to count backward from the end or right.
 
-如果你需要指定一些未经过特殊处理的字符串，比如转义序列，那么你需要在字符串前增加 `r` 或 `R` 来指定一个 _原始（Raw）_ 字符串。由r开头引起的字符串，就是原始字符串，在里面放任何字符都表示该字符的原始含义。下面是一个例子：
 
-```python
-r"Newlines are indicated by \n"
+- S[0] fetches the first item.
+
+
+- S[−2] fetches the second item from the end (like S[len(S)−2]).
+
+**Slicing (S[i:j]) extracts contiguous sections of sequences:**
+
+- The upper bound is noninclusive.
+
+
+-  Slice boundaries default to 0 and the sequence length, if omitted.
+
+
+- S[1:3] fetches items at offsets 1 up to but not including 3.
+
+
+- S[1:] fetches items at offset 1 through the end (the sequence length).
+
+
+- S[:3] fetches items at offset 0 up to but not including 3.
+
+
+- S[:−1] fetches items at offset 0 up to but not including the last item.
+
+
+- S[:] fetches items at offsets 0 through the end—making a top-level copy of S.
+
+**Extended slicing (S[i:j:k]) accepts a step (or stride) k, which defaults to +1:**
+
+- Allows for skipping items and reversing order—see the next section.
+
+  X[I:J:K], which means “extract all the items in X, from offset I through J−1, by K.”The third limit, K, defaults to +1, which is why normally all items in a slice are extracted from left to right. 
+
+```
+>>> 'spam'[1:3] 			# Slicing syntax
+'pa'
+>>> 'spam'[slice(1, 3)] 	# Slice objects with index syntax + object
+'pa'
+>>> 'spam'[::-1] 
+'maps'
+>>> 'spam'[slice(None, None, −1)] 
+'maps'
 ```
 
-> **针对正则表达式用户的提示**
->
-> 在处理正则表达式时应全程使用原始字符串。否则，将会有大量 Backwhacking 需要处理。举例说明的话，反向引用可以通过 `'\\1'` 或 `r'\1' ` 来实现。
+![Slicing](img/Slicing.jpg)
 
-这种方法在做网站设置网站目录结构的时候非常有用。使用了原始字符串，就不需要转义了。
+> The basics of slicing are straightforward. When you index a sequence object such as a string on a pair of offsets separated by a colon, Python returns a new object containing the contiguous section identified by the offset pair. The left offset is taken to be the lower bound (inclusive), and the right is the upper bound (noninclusive). That is, Python fetches all items from the lower bound up to but not including the upper bound, and returns a new object containing the fetched items. If omitted, the left and right bounds default to 0 and the length of the object you are slicing, respectively.
+
+
+
+```
+>>> S = 'Spam'		# Make a 4-character string, and assign it to a name 
+>>> len(S) 			# Length
+4		
+>>> S[0] 			# The first item in S, indexing by zero-based position
+'S'
+>>> S[1] 			# The second item from the left
+'p'
+>>> S[-1] 			# The last item from the end in S
+'m'
+>>> S[len(S)-1] 	# Negative indexing, the hard way
+'m'					# we can use an arbitrary expression in the square brackets.
+					# anywhere that Python expects a value, we can use a literal, a variable, or any expression we wish. Python’s syntax is completely general this way.
+
+>>> S[-2] 			# The second-to-last item from the end
+'a'
+>>> S 				# A 4-character string 
+'Spam'
+>>> S[1:3] 			# Slice of S from offsets 1 through 2 (not 3)
+'pa'
+
+# In a slice, the left bound defaults to zero, and the right bound defaults to the length of the sequence being sliced. This leads to some common usage variations:
+
+>>> S[1:] 			# Everything past the first (1:len(S)) 
+'pam'
+>>> S[0:3] 			# Everything but the last
+'Spa'
+>>> S[:3] 			# Same as S[0:3]
+'Spa'
+>>> S[:-1] 			# Everything but the last again, but simpler (0:-1)
+'Spa'
+>>> S[:] 			# All of S as a top-level copy (0:len(S))
+'Spam'
+>>> S + 'xyz' 		# Concatenation 
+'Spamxyz'
+>>> S 				# S is unchanged 
+'Spam'
+>>> S * 8 			# Repetition 
+'SpamSpamSpamSpamSpamSpamSpamSpam'
+```
 
 
 
@@ -364,6 +564,10 @@ hello,world
 >>> "py" + "thon"
 'python'
 ```
+
+
+
+## 字符串转换工具 String Conversion
 
 ### str()
 
@@ -456,7 +660,11 @@ Hello World !
 
 ### ord()和chr()函数
 
-对于单个字符的编码，Python提供了`ord()`函数获取字符的整数表示，`chr()`函数把编码转换为对应的字符：
+对于单个字符的编码，Python提供了
+
+`ord()`函数 (转换为对应的ASCII码，函数实际返回的是这个字符在内存中对应的字符的二进制值) 获取字符的整数表示，
+
+`chr()`函数(获取ASCII码并将其转化为对应的字符)把编码转换为对应的字符：
 
 ```
 >>> ord('A')
@@ -846,21 +1054,21 @@ Python 的字符串常用内建函数如下：
 | 17   | [isupper()](http://www.runoob.com/python3/python3-string-isupper.html)    如果字符串中包含至少一个区分大小写的字符，并且所有这些(区分大小写的)字符都是大写，则返回 True，否则返回 False |
 | 18   | [join(seq)](http://www.runoob.com/python3/python3-string-join.html)    以指定字符串作为分隔符，将 seq 中所有的元素(的字符串表示)合并为一个新的字符串 |
 | 19   | [len(string)](http://www.runoob.com/python3/python3-string-len.html)    返回字符串长度 |
-| 20   | [ljust(width[, fillchar\])](http://www.runoob.com/python3/python3-string-ljust.html)返回一个原字符串左对齐,并使用 fillchar 填充至长度 width 的新字符串，fillchar 默认为空格。 |
+| 20   | ljust(width[, fillchar\])返回一个原字符串左对齐,并使用 fillchar 填充至长度 width 的新字符串，fillchar 默认为空格。 |
 | 21   | [lower()](http://www.runoob.com/python3/python3-string-lower.html)转换字符串中所有大写字符为小写. |
 | 22   | [lstrip()](http://www.runoob.com/python3/python3-string-lstrip.html)截掉字符串左边的空格 |
 | 23   | [maketrans()](http://www.runoob.com/python3/python3-string-maketrans.html)创建字符映射的转换表，对于接受两个参数的最简单的调用方式，第一个参数是字符串，表示需要转换的字符，第二个参数也是字符串表示转换的目标。 |
 | 24   | [max(str)](http://www.runoob.com/python3/python3-string-max.html)返回字符串 str 中最大的字母。 |
 | 25   | [min(str)](http://www.runoob.com/python3/python3-string-min.html)返回字符串 str 中最小的字母。 |
-| 26   | [replace(old, new [, max\])](http://www.runoob.com/python3/python3-string-replace.html)把 将字符串中的 str1 替换成 str2,如果 max 指定，则替换不超过 max 次。 |
+| 26   | replace(old, new [, max\])把 将字符串中的 str1 替换成 str2,如果 max 指定，则替换不超过 max 次。 |
 | 27   | [rfind(str, beg=0,end=len(string))](http://www.runoob.com/python3/python3-string-rfind.html)类似于 find()函数，不过是从右边开始查找. |
 | 28   | [rindex( str, beg=0, end=len(string))](http://www.runoob.com/python3/python3-string-rindex.html)类似于 index()，不过是从右边开始. |
-| 29   | [rjust(width,[, fillchar\])](http://www.runoob.com/python3/python3-string-rjust.html)返回一个原字符串右对齐,并使用fillchar(默认空格）填充至长度 width 的新字符串 |
+| 29   | rjust(width,[, fillchar\])返回一个原字符串右对齐,并使用fillchar(默认空格）填充至长度 width 的新字符串 |
 | 30   | [rstrip()](http://www.runoob.com/python3/python3-string-rstrip.html)删除字符串字符串末尾的空格. |
-| 31   | [split(str="", num=string.count(str))](http://www.runoob.com/python3/python3-string-split.html)num=string.count(str)) 以 str 为分隔符截取字符串，如果 num 有指定值，则仅截取 num 个子字符串 |
-| 32   | [splitlines([keepends\])](http://www.runoob.com/python3/python3-string-splitlines.html)按照行('\r', '\r\n', \n')分隔，返回一个包含各行作为元素的列表，如果参数 keepends 为 False，不包含换行符，如果为 True，则保留换行符。 |
+| 31   | split(str="", num=string.count(str))num=string.count(str)) 以 str 为分隔符截取字符串，如果 num 有指定值，则仅截取 num 个子字符串 |
+| 32   | splitlines([keepends\])按照行('\r', '\r\n', \n')分隔，返回一个包含各行作为元素的列表，如果参数 keepends 为 False，不包含换行符，如果为 True，则保留换行符。 |
 | 33   | [startswith(str, beg=0,end=len(string))](http://www.runoob.com/python3/python3-string-startswith.html)检查字符串是否是以 obj 开头，是则返回 True，否则返回 False。如果beg 和 end 指定值，则在指定范围内检查。 |
-| 34   | [strip([chars\])](http://www.runoob.com/python3/python3-string-strip.html)在字符串上执行 lstrip()和 rstrip() |
+| 34   | strip([chars\])在字符串上执行 lstrip()和 rstrip() |
 | 35   | [swapcase()](http://www.runoob.com/python3/python3-string-swapcase.html)将字符串中大写转换为小写，小写转换为大写 |
 | 36   | [title()](http://www.runoob.com/python3/python3-string-title.html)返回"标题化"的字符串,就是说所有单词都是以大写开始，其余字母均为小写(见 istitle()) |
 | 37   | [translate(table, deletechars="")](http://www.runoob.com/python3/python3-string-translate.html)根据 str 给出的表(包含 256 个字符)转换 string 的字符, 要过滤掉的字符放到 deletechars 参数中 |
@@ -1299,6 +1507,44 @@ Nesting arguments and more complex examples:
 ```
 
 
+
+
+
+
+
+### str.replace()
+
+replace() 方法把字符串中的 old（旧字符串） 替换成 new(新字符串)，如果指定第三个参数max，则替换不超过 max 次。
+
+```
+str.replace(old, new[, max])
+```
+
+- old -- 将被替换的子字符串。
+- new -- 新字符串，用于替换old子字符串。
+- max -- 可选字符串, 替换不超过 max 次
+
+返回字符串中的 old（旧字符串） 替换成 new(新字符串)后生成的新字符串，如果指定第三个参数max，则替换不超过 max 次。
+
+> **replace**(...)
+>
+> ​    S.replace(old, new[, count]) -> str
+>
+> ​    
+>
+> ​    Return a copy of S with all occurrences of substring
+>
+> ​    old replaced by new.  If the optional argument count is
+>
+> ​    given, only the first count occurrences are replaced.
+
+```
+>>> S = 'Spam'
+>>> S.replace('pa', 'XYZ') 		# Replace occurrences of a string in S with another
+'SXYZm'
+>>> S 
+'Spam'
+```
 
 
 
