--- a/Python/Python Study Notes/字符串和编码.md
+++ b/Python/Python Study Notes/字符串和编码.md
@@ -1014,7 +1014,40 @@ I love python
 
 ## python的字符串内建函数
 
-字符串方法是从python1.6到2.0慢慢加进来的——它们也被加到了Jython中。
+### Method Call Syntax
+
+methods are simply functions that are associated with and act upon particular objects. Technically, they are attributes attached to objects that happen to reference callable functions which always have an implied subject. In finer-grained detail, functions are packages of code, and **method calls combine two operations at once—an attribute fetch and a call:**
+
+> Attribute fetches 
+>
+> An expression of the form object.attribute means “fetch the value of attribute in object.”
+
+> Call expressions 
+>
+> An expression of the form function(arguments) means “invoke the code of func tion, passing zero or more comma-separated argument objects to it, and return function’s result value.”
+
+**The method call expression:**
+
+```
+object.method(arguments)
+```
+
+> is evaluated from left to right—Python will first fetch the method of the object and then call it, passing in both object and the arguments. Or, in plain words, the method call expression means this:
+>
+> Call method to process object with arguments.
+>
+> If the method computes a result, it will also come back as the result of the entire method-call expression.
+>
+> ```
+> >>> S = 'spam'
+> >>> result = S.find('pa')	# Call the find method to look for 'pa' in string S
+> ```
+>
+> most objects have callable methods, and all are accessed using this same method-call syntax. methods cannot be run (and make little sense) without a subject.
+
+
+
+### String method calls
 
 这些方法实现了string模块的大部分方法，如下表所示列出了目前字符串内建支持的方法，所有的方法都包含了对Unicode的支持，有一些甚至是专门用于Unicode的。
 
@@ -1027,15 +1060,14 @@ I love python
 >>> help(str.title)		#查看string包内title函数功能
 ```
 
-
-
-## Python 的字符串内建函数
-
 Python 的字符串常用内建函数如下：
+
+In this table, S is a string object, and optional arguments are enclosed in square brackets.
 
 | 序号   | 方法及描述                                    |
 | ---- | ---------------------------------------- |
 | 1    | [capitalize()](http://www.runoob.com/python3/python3-string-capitalize.html)    将字符串的第一个字符转换为大写 |
+|      | S.casefold()                             |
 | 2    | [center(width, fillchar)](http://www.runoob.com/python3/python3-string-center.html)    返回一个指定的宽度 width 居中的字符串，fillchar 为填充的字符，默认为空格。 |
 | 3    | [count(str, beg= 0,end=len(string))](http://www.runoob.com/python3/python3-string-count.html)    返回 str 在 string 里面出现的次数，如果 beg 或者 end 指定则返回指定范围内 str 出现的次数 |
 | 4    | [bytes.decode(encoding="utf-8", errors="strict")](http://www.runoob.com/python3/python3-string-decode.html)    Python3 中没有 decode 方法，但我们可以使用 bytes 对象的 decode() 方法来解码给定的 bytes 对象，这个 bytes 对象可以由 str.encode() 来编码返回。 |
@@ -1043,29 +1075,37 @@ Python 的字符串常用内建函数如下：
 | 6    | [endswith(suffix, beg=0, end=len(string))](http://www.runoob.com/python3/python3-string-endswith.html)    检查字符串是否以 obj 结束，如果beg 或者 end 指定则检查指定的范围内是否以 obj 结束，如果是，返回 True,否则返回 False. |
 | 7    | [expandtabs(tabsize=8)](http://www.runoob.com/python3/python3-string-expandtabs.html)    把字符串 string 中的 tab 符号转为空格，tab 符号默认的空格数是 8 。 |
 | 8    | [find(str, beg=0 end=len(string))](http://www.runoob.com/python3/python3-string-find.html)    检测 str 是否包含在字符串中 中，如果 beg 和 end 指定范围，则检查是否包含在指定范围内，如果是返回开始的索引值，否则返回-1 |
+|      | S.format(fmtstr, *args, **kwargs)        |
 | 9    | [index(str, beg=0, end=len(string))](http://www.runoob.com/python3/python3-string-index.html)    跟find()方法一样，只不过如果str不在字符串中会报一个异常. |
 | 10   | [isalnum()](http://www.runoob.com/python3/python3-string-isalnum.html)    如果字符串至少有一个字符并且所有字符都是字母或数字则返 回 True,否则返回 False |
 | 11   | [isalpha()](http://www.runoob.com/python3/python3-string-isalpha.html)    如果字符串至少有一个字符并且所有字符都是字母则返回 True, 否则返回 False |
+|      | S.isdecimal()                            |
+| 40   | [isdecimal()](http://www.runoob.com/python3/python3-string-isdecimal.html)检查字符串是否只包含十进制字符，如果是返回 true，否则返回 false。 |
 | 12   | [isdigit()](http://www.runoob.com/python3/python3-string-isdigit.html)    如果字符串只包含数字则返回 True 否则返回 False.. |
+|      | S.isidentifier()                         |
 | 13   | [islower()](http://www.runoob.com/python3/python3-string-islower.html)    如果字符串中包含至少一个区分大小写的字符，并且所有这些(区分大小写的)字符都是小写，则返回 True，否则返回 False |
 | 14   | [isnumeric()](http://www.runoob.com/python3/python3-string-isnumeric.html)    如果字符串中只包含数字字符，则返回 True，否则返回 False |
+|      | S.isprintable()                          |
 | 15   | [isspace()](http://www.runoob.com/python3/python3-string-isspace.html)    如果字符串中只包含空格，则返回 True，否则返回 False. |
 | 16   | [istitle()](http://www.runoob.com/python3/python3-string-istitle.html)    如果字符串是标题化的(见 title())则返回 True，否则返回 False |
 | 17   | [isupper()](http://www.runoob.com/python3/python3-string-isupper.html)    如果字符串中包含至少一个区分大小写的字符，并且所有这些(区分大小写的)字符都是大写，则返回 True，否则返回 False |
-| 18   | [join(seq)](http://www.runoob.com/python3/python3-string-join.html)    以指定字符串作为分隔符，将 seq 中所有的元素(的字符串表示)合并为一个新的字符串 |
+| 18   | S.join(iterable)    以指定字符串作为分隔符，将 seq 中所有的元素(的字符串表示)合并为一个新的字符串 |
 | 19   | [len(string)](http://www.runoob.com/python3/python3-string-len.html)    返回字符串长度 |
-| 20   | ljust(width[, fillchar\])返回一个原字符串左对齐,并使用 fillchar 填充至长度 width 的新字符串，fillchar 默认为空格。 |
+| 20   | `S.ljust(width[, fillchar])` 返回一个原字符串左对齐,并使用 fillchar 填充至长度 width 的新字符串，fillchar 默认为空格。 |
 | 21   | [lower()](http://www.runoob.com/python3/python3-string-lower.html)转换字符串中所有大写字符为小写. |
 | 22   | [lstrip()](http://www.runoob.com/python3/python3-string-lstrip.html)截掉字符串左边的空格 |
-| 23   | [maketrans()](http://www.runoob.com/python3/python3-string-maketrans.html)创建字符映射的转换表，对于接受两个参数的最简单的调用方式，第一个参数是字符串，表示需要转换的字符，第二个参数也是字符串表示转换的目标。 |
+| 23   | `S.maketrans(x[, y[, z]])` 创建字符映射的转换表，对于接受两个参数的最简单的调用方式，第一个参数是字符串，表示需要转换的字符，第二个参数也是字符串表示转换的目标。 |
 | 24   | [max(str)](http://www.runoob.com/python3/python3-string-max.html)返回字符串 str 中最大的字母。 |
 | 25   | [min(str)](http://www.runoob.com/python3/python3-string-min.html)返回字符串 str 中最小的字母。 |
-| 26   | replace(old, new [, max\])把 将字符串中的 str1 替换成 str2,如果 max 指定，则替换不超过 max 次。 |
+|      | `S.partition(sep)`                       |
+| 26   | `S.replace(old, new [, count])` 把 将字符串中的 str1 替换成 str2,如果 max 指定，则替换不超过 max 次。 |
 | 27   | [rfind(str, beg=0,end=len(string))](http://www.runoob.com/python3/python3-string-rfind.html)类似于 find()函数，不过是从右边开始查找. |
 | 28   | [rindex( str, beg=0, end=len(string))](http://www.runoob.com/python3/python3-string-rindex.html)类似于 index()，不过是从右边开始. |
-| 29   | rjust(width,[, fillchar\])返回一个原字符串右对齐,并使用fillchar(默认空格）填充至长度 width 的新字符串 |
-| 30   | [rstrip()](http://www.runoob.com/python3/python3-string-rstrip.html)删除字符串字符串末尾的空格. |
+| 29   | `S.rjust(width [, fillchar])` 返回一个原字符串右对齐,并使用fillchar(默认空格）填充至长度 width 的新字符串 |
+|      | `S.rpartition(sep)`                      |
 | 31   | split(str="", num=string.count(str))num=string.count(str)) 以 str 为分隔符截取字符串，如果 num 有指定值，则仅截取 num 个子字符串 |
+| 30   | [rstrip()](http://www.runoob.com/python3/python3-string-rstrip.html)删除字符串字符串末尾的空格. |
+|      | `S.split([sep [,maxsplit]])`             |
 | 32   | splitlines([keepends\])按照行('\r', '\r\n', \n')分隔，返回一个包含各行作为元素的列表，如果参数 keepends 为 False，不包含换行符，如果为 True，则保留换行符。 |
 | 33   | [startswith(str, beg=0,end=len(string))](http://www.runoob.com/python3/python3-string-startswith.html)检查字符串是否是以 obj 开头，是则返回 True，否则返回 False。如果beg 和 end 指定值，则在指定范围内检查。 |
 | 34   | strip([chars\])在字符串上执行 lstrip()和 rstrip() |
@@ -1074,7 +1114,7 @@ Python 的字符串常用内建函数如下：
 | 37   | [translate(table, deletechars="")](http://www.runoob.com/python3/python3-string-translate.html)根据 str 给出的表(包含 256 个字符)转换 string 的字符, 要过滤掉的字符放到 deletechars 参数中 |
 | 38   | [upper()](http://www.runoob.com/python3/python3-string-upper.html)转换字符串中的小写字母为大写 |
 | 39   | [zfill (width)](http://www.runoob.com/python3/python3-string-zfill.html)返回长度为 width 的字符串，原字符串右对齐，前面填充0 |
-| 40   | [isdecimal()](http://www.runoob.com/python3/python3-string-isdecimal.html)检查字符串是否只包含十进制字符，如果是返回 true，否则返回 false。 |
+|      |                                          |
 
 
 
@@ -1555,6 +1595,47 @@ str.replace(old, new[, max])
 ### ...
 
 
+
+## String Method Examples
+
+to **make a new text value from an existing string**, you construct a new string with operations such as slicing and concatenation.
+
+```
+>>> S = 'spammy'
+>>> S = S[:3] + 'xx' + S[5:]		# Slice sections from S
+>>> S 
+'spaxxy'
+```
+
+```
+>>> S = "abcde"
+>>> id(S)
+4323524480
+>>> S = S.replace("cd","mn")		# Replace all cd with mn in S
+>>> S
+'abmne'
+>>> id(S)
+4324167784
+```
+
+**The replace method** is more general than this code implies. It takes as arguments the original substring (of any length) and the string (of any length) to replace it with, and performs a global search and replace:
+
+```
+>>> 'aa$bb$cc$dd'.replace('$', 'SPAM') 
+'aaSPAMbbSPAMccSPAMdd'
+```
+
+If you need to replace one fixed-size string that can occur at any offset, you can do a replacement again, or search for the substring with the string **find method** and then slice:
+
+```
+>>> S = 'xxxxSPAMxxxxSPAMxxxx'
+>>> where = S.find('SPAM') 			# Search for position
+>>> where 							# Occurs at offset 4 
+4
+>>> S = S[:where] + 'EGGS' + S[(where+4):]
+>>> S 
+'xxxxEGGSxxxxSPAMxxxx'
+```
 
 
 
