--- a/Python/Python Study Notes/函数.md
+++ b/Python/Python Study Notes/函数.md
@@ -1,8 +1,12 @@
+# Python Study Notes
 
 
 
+# 函数
 
-### 抽象
+
+
+## 抽象
 
 计算数列的和，比如：`1 + 2 + 3 + ... + 100`，写起来十分不方便，于是数学家发明了求和符号∑，可以把`1 + 2 + 3 + ... + 100`记作：
 
@@ -22,9 +26,128 @@ $$\sum_{n=1}^{100}{(n^2+1)}$$
 
 
 
+## 调用函数
+
+要调用一个函数，需要知道函数的名称和参数。
+
+调用`abs`函数：
+
+```
+>>> abs(100)
+100
+>>> abs(-20)
+20
+>>> abs(12.34)
+12.34
+```
+
+调用函数的时候，如果传入的参数数量不对，会报`TypeError`的错误：
+
+```
+>>> abs(1, 2)
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+TypeError: abs() takes exactly one argument (2 given)
+```
+
+传入的参数数量是对的，但参数类型不能被函数所接受，也会报`TypeError`的错误：
+
+```
+>>> abs('a')
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+TypeError: bad operand type for abs(): 'str'
+```
+
+函数名其实就是指向一个函数对象的引用，完全可以把函数名赋给一个变量：
+
+```
+>>> a = abs 	# 变量a指向abs函数
+>>> a(-1) 		# 所以也可以通过a调用abs函数
+1
+```
 
 
 
+## 定义函数
 
+在Python中，定义一个函数要使用`def`语句，依次写出函数名、括号、括号中的参数和冒号`:`，然后，在缩进块中编写函数体，函数的返回值用`return`语句返回。
 
+```
+def my_abs(x):
+    if x >= 0:
+        return x
+    else:
+        return -x
+```
 
+> 函数体内部的语句在执行时，一旦执行到`return`时，函数就执行完毕，并将结果返回。如果没有`return`语句，函数执行完毕后也会返回结果，只是结果为`None`。
+>
+> `return None`可以简写为`return`。
+
+### 空函数
+
+如果想定义一个什么事也不做的空函数，可以用`pass`语句, `pass`语句什么都不做：
+
+```
+def nop():
+    pass
+```
+
+> 实际上`pass`可以用来作为占位符，比如现在还没想好怎么写函数的代码，就可以先放一个`pass`，让代码能运行起来。
+>
+> ```
+> if age >= 18:
+>     pass		# 缺少了pass，代码运行就会有语法错误。
+> ```
+
+### 参数检查
+
+调用函数时，如果参数个数不对，Python解释器会自动检查出来，并抛出`TypeError`：
+
+```
+>>> my_abs(1, 2)
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+TypeError: my_abs() takes 1 positional argument but 2 were given
+```
+
+但是如果参数类型不对，Python解释器就无法帮我们检查:
+
+```
+>>> my_abs('A')
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+  File "<stdin>", line 2, in my_abs
+TypeError: unorderable types: str() >= int()
+>>> abs('A')
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+TypeError: bad operand type for abs(): 'str'
+```
+
+> 当传入了不恰当的参数时，内置函数`abs`会检查出参数错误，而我们定义的`my_abs`没有参数检查，会导致`if`语句出错，出错信息和`abs`不一样。所以，这个函数定义不够完善。
+
+修改一下`my_abs`的定义，对参数类型做检查，只允许整数和浮点数类型的参数。数据类型检查可以用内置函数`isinstance()`实现：
+
+```
+def my_abs(x):
+    if not isinstance(x, (int, float)):
+        raise TypeError('bad operand type')
+    if x >= 0:
+        return x
+    else:
+        return -x
+```
+
+```
+>>> my_abs('A')		# 添加了参数检查后，如果传入错误的参数类型，函数就可以抛出一个错误
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+  File "<stdin>", line 3, in my_abs
+TypeError: bad operand type
+```
+
+### 返回多个值
+
+Python的函数返回多值其实就是返回一个tuple.
