--- a/Python/Python Study Notes/字符串和编码.md
+++ b/Python/Python Study Notes/字符串和编码.md
@@ -1598,7 +1598,11 @@ str.replace(old, new[, max])
 
 ## String Method Examples
 
-to **make a new text value from an existing string**, you construct a new string with operations such as slicing and concatenation.
+### Changing String
+
+#### 1. make a new text value from an existing string
+
+you construct a new string with operations such as slicing and concatenation.
 
 ```
 >>> S = 'spammy'
@@ -1618,7 +1622,11 @@ to **make a new text value from an existing string**, you construct a new string
 4324167784
 ```
 
-**The replace method** is more general than this code implies. It takes as arguments the original substring (of any length) and the string (of any length) to replace it with, and performs a global search and replace:
+#### 2. The replace method 
+
+ **replace returns a new string object** 
+
+is more general than this code implies. It takes as arguments the original substring (of any length) and the string (of any length) to replace it with, and performs a global search and replace:
 
 ```
 >>> 'aa$bb$cc$dd'.replace('$', 'SPAM') 
@@ -1636,6 +1644,65 @@ If you need to replace one fixed-size string that can occur at any offset, you c
 >>> S 
 'xxxxEGGSxxxxSPAMxxxx'
 ```
+
+use replace with a third argument:
+
+```
+>>> S = 'xxxxSPAMxxxxSPAMxxxx'
+>>> S.replace('SPAM', 'EGGS')		# Replace all		
+'xxxxEGGSxxxxEGGSxxxx'
+
+>>> S.replace('SPAM', 'EGGS', 1) 	# Replace one
+'xxxxEGGSxxxxSPAMxxxx'
+```
+
+> Notice that replace returns a new string object each time. Because strings are immutable
+>
+
+**make multiple changes to it without generating a new copy for each change:**
+
+```
+>>> S = 'spammy'
+>>> L = list(S)
+>>> L 
+['s', 'p', 'a', 'm', 'm', 'y']
+
+>>> L[3] = 'x'		# Works for lists, not strings
+>>> L[4] = 'x'
+>>> L ['s', 'p', 'a', 'x', 'x', 'y']
+```
+
+after your changes, you need to convert back to a string (e.g., to write to a file), use the string join method to “implode” the list back into a string:
+
+```
+>>> S = ''.join(L)
+>>> S
+'spaxxy'
+```
+
+> join puts the strings in a list (or other iterable) together, with the delimiter between list items; in this case, it uses an empty string delimiter to convert from a list back to a string. More generally, any string delimiter and iterable of strings will do:
+>
+> ```
+> >>> 'SPAM'.join(['eggs', 'sausage', 'ham', 'toast']) 'eggsSPAMsausageSPAMhamSPAMtoast'
+> ```
+
+
+
+### Parsing Text
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
