--- a/Python/Python Study Notes/字符串和编码.md
+++ b/Python/Python Study Notes/字符串和编码.md
@@ -432,7 +432,7 @@ re.match('sp(.*)am', line)		Pattern matching: library module
 | r/R    | 原始字符串 - 原始字符串：所有的字符串都是直接按照字面的意思来使用，没有转义特殊或不能打印的字符。 原始字符串除在字符串的第一个引号前加上字母"r"（可以大小写）以外，与普通字符串有着几乎完全相同的语法。 | >>>print r'\n'\n>>> print R'\n'\n |
 | %      | 格式字符串                                    | 见格式化                              |
 
-#### Indexing and Slicing：
+### Indexing and Slicing：
 
 **Indexing (S[i]) fetches components at offsets:**
 
